@@ -1,6 +1,8 @@
 3.4.0 (unreleased)
 ------------------
 
+- Laboratory Supervisor field on the Laboratory(Bika Setup - Laboratory Information)
+- Laboratory License ID field on the Laboratory(Bika Setup - Laboratory Information)
 - Add instrument Agilent-Masshunter
 - Issue-2145: Client Departments/Types structure not preserved on reinstall
 - Issue-2143: Make Bika API work with DX types properly
